<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>gazebo_google_eartgazebo_geospatial_pluginh_plugin</name>
 <version>0.0.0</version>
 <description> Geospatial map plugin for gazebo </description>
 <maintainer email="AustinDeric@gmail.com">AustinDeric</maintainer>
 <license>GNU General Public License v3.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>